# BleedingInTheBlur

./: .gitignore  .gitmodules  CMakeLists.txt  Constants.h  Game.c  Game.h  README.md  main.c
data/: healthbar.aseprite  manifest.json
include/: Character.h  Constants.h  Game.h  LevelGenerator.h  Structs.h  Util.h
src/: Character.c  Constants.c  Game.c  Level.c  LevelGenerator.c  Menu.c  NPC.c  Player.c  Popup.c  Util.c
